--- a/src/main/resources/com/example/my_game_java/splash-screen-view.fxml
+++ b/src/main/resources/com/example/my_game_java/splash-screen-view.fxml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Text?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.my_game_java.controllers.SplashScreenController">
+<?import javafx.scene.control.Button?>
+<AnchorPane fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;"
+            xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.my_game_java.controllers.SplashScreenController"
+            stylesheets="@css/styles.css">
     <children>
         <ImageView fx:id="imageView" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="463.0" layoutY="282.0" mnemonicParsing="false" prefHeight="134.0" prefWidth="340.0" text="Button" />
+        <Rectangle fx:id="rectangle" fill="black" height="720.0" opacity="0.5" width="1280.0"  />
+        <Label fx:id="logo" layoutX="315.0" layoutY="75.0" alignment="CENTER">
+            <text>
+                <Text fx:id="text_logo" text="Label" styleClass="text"/>
+            </text>
+        </Label>
+        <Button fx:id="button_main" layoutX="575" layoutY="550">
+        </Button>
     </children>
 </AnchorPane>
