--- a/src/main/resources/com/example/my_game_java/main-menu-view.fxml
+++ b/src/main/resources/com/example/my_game_java/main-menu-view.fxml
@@ -3,7 +3,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1">
     <VBox prefHeight="570.0" prefWidth="900.0" style="-fx-background-color: #FF6347;" />
     <VBox layoutX="900.0" prefHeight="570.0" prefWidth="380.0" style="-fx-background-color: #7FFF00;" />
     <VBox layoutY="570.0" prefHeight="150.0" prefWidth="1280.0" style="-fx-background-color: #1E90FF;" />
