--- a/src/main/resources/com/example/my_game_java/main-menu-view.fxml
+++ b/src/main/resources/com/example/my_game_java/main-menu-view.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1">
-    <VBox prefHeight="570.0" prefWidth="900.0" style="-fx-background-color: #FF6347;" />
-    <VBox layoutX="900.0" prefHeight="570.0" prefWidth="380.0" style="-fx-background-color: #7FFF00;" />
-    <VBox layoutY="570.0" prefHeight="150.0" prefWidth="1280.0" style="-fx-background-color: #1E90FF;" />
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
+            minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="720.0" prefWidth="1280.0"
+            fx:controller="com.example.my_game_java.controllers.MainMenuController"
+            xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1"
+            style="-fx-background-color: black;">
+   <children>
+       <ImageView fx:id="imageView" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
 </AnchorPane>
