--- a/src/main/resources/com/example/my_game_java/main-menu-view.fxml
+++ b/src/main/resources/com/example/my_game_java/main-menu-view.fxml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="720.0" prefWidth="1280.0"
-            fx:controller="com.example.my_game_java.controllers.MainMenuController"
-            xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1"
-            style="-fx-background-color: black;">
-   <children>
-       <ImageView fx:id="imageView" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true" />
-   </children>
-</AnchorPane>
+<StackPane fx:id="rootPane"
+           prefHeight="720.0" prefWidth="1280.0"
+           style="-fx-background-color: black;"
+           xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.example.my_game_java.controllers.MainMenuController"
+           stylesheets="@css/styles.css">
+    <children>
+        <ImageView fx:id="imageView" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true"/>
+        <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 25 0 0 0;">
+            <Label fx:id="logo">
+                <text>
+                    <Text fx:id="text_logo" text="My Game" styleClass="text"/>
+                </text>
+            </Label>
+            <Button fx:id="start_game"
+                    prefWidth="250" prefHeight="50"/>
+        </VBox>
+    </children>
+</StackPane>
