#main menu , audioplayer and options setup

--- a/src/main/resources/com/example/my_game_java/main-view.fxml
+++ b/src/main/resources/com/example/my_game_java/main-view.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
-    <VBox prefHeight="570.0" prefWidth="900.0" style="-fx-background-color: #FF6347;" />
-    <VBox layoutX="900.0" prefHeight="570.0" prefWidth="380.0" style="-fx-background-color: #7FFF00;" />
-    <VBox layoutY="570.0" prefHeight="150.0" prefWidth="1280.0" style="-fx-background-color: #1E90FF;" />
-</VBox>
+<?import javafx.scene.layout.StackPane?>
+<StackPane style="-fx-background-color: black;">
+
+</StackPane>
