--- a/src/main/resources/com/example/my_game_java/main-menu-view.fxml
+++ b/src/main/resources/com/example/my_game_java/main-menu-view.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.shape.Rectangle?>
 <StackPane fx:id="rootPane"
            prefHeight="720.0" prefWidth="1280.0"
            style="-fx-background-color: black;"
@@ -15,14 +17,24 @@
            stylesheets="@css/styles.css">
     <children>
         <ImageView fx:id="imageView" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true"/>
-        <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 25 0 0 0;">
+        <Rectangle fx:id="rectangle" fill="black" height="720.0" opacity="0.6" width="1280.0"  />
+        <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 25 0 0 0; -fx-spacing: 100;">
             <Label fx:id="logo">
                 <text>
                     <Text fx:id="text_logo" text="My Game" styleClass="text"/>
                 </text>
             </Label>
-            <Button fx:id="start_game"
-                    prefWidth="250" prefHeight="50"/>
+            <VBox alignment="TOP_CENTER" style="-fx-spacing: 20;">
+                <Button fx:id="start_game"
+                        prefWidth="250" prefHeight="60"/>
+                <Button fx:id="load_game"
+                        prefWidth="250" prefHeight="60"/>
+                <Button fx:id="options"
+                        prefWidth="250" prefHeight="60"/>
+                <Button fx:id="exit_game"
+                        prefWidth="250" prefHeight="60"/>
+            </VBox>
+
         </VBox>
     </children>
 </StackPane>
