--- a/src/main/java/com/example/my_game_java/css/styles.css
+++ b/src/main/java/com/example/my_game_java/css/styles.css
@@ -4,8 +4,8 @@
     -fx-letter-spacing: -10px;
     -fx-font-weight: bold;
     -fx-font-family: "Copperplate Gothic Bold";
-    -fx-stroke: #ffffff; /* Border color */
-    -fx-stroke-width: 2px; /* Border thickness */
+    -fx-stroke: #ffffff;
+    -fx-stroke-width: 2px;
 }
 
 .button .text {
@@ -13,5 +13,12 @@
     -fx-font-weight: normal;
     -fx-letter-spacing: 0;
     -fx-stroke: none;
+}
+
+.vbox {
+    -fx-pref-width: 300;
+    -fx-pref-height: 500;
+    -fx-background-color: black;
+    -fx-opacity: 0.7;
 }
 
