--- a/src/main/resources/com/example/my_game_java/start-game-view.fxml
+++ b/src/main/resources/com/example/my_game_java/start-game-view.fxml
@@ -1,20 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Rectangle?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            style="-fx-background-color: black;"
-            fx:controller="com.example.my_game_java.controllers.StartGameController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.text.Text?>
 
-    <ImageView fx:id="background" fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true"/>
-    <Rectangle fx:id="rectangle" fill="black" height="720.0" opacity="0.6" width="1280.0"  />
+<StackPane xmlns="http://javafx.com/javafx"
+           xmlns:fx="http://javafx.com/fxml"
+           style="-fx-background-color: black;"
+           fx:controller="com.example.my_game_java.controllers.StartGameController"
+           prefHeight="720.0" prefWidth="1280.0"
+           stylesheets="@css/styles.css">
 
-</AnchorPane>
+    <!-- Tło gry -->
+    <ImageView fx:id="background" fitHeight="720.0" fitWidth="1280.0"
+               pickOnBounds="true" preserveRatio="true"/>
+
+    <!-- Ciemny overlay dla efektu przyciemnienia -->
+    <Rectangle fx:id="rectangle" fill="black" height="720.0" opacity="0.6" width="1280.0" />
+
+    <!-- Główna zawartość -->
+    <VBox spacing="50" alignment="CENTER">
+        <!-- Logo Gry -->
+        <Label fx:id="logo">
+            <text>
+                <Text fx:id="text_logo" text="My Game" styleClass="text"/>
+            </text>
+        </Label>
+
+        <!-- Wybór klasy postaci -->
+        <HBox spacing="20" alignment="CENTER">
+            <VBox styleClass="vbox" alignment="CENTER" spacing="20">
+                <Label fx:id="warrior_label" style="-fx-font-size: 50;"/>
+                <Label fx:id="warrior_label2" style="-fx-font-size: 30;" text="EXTRA DEFENSE"/>
+                <Button fx:id="button_warrior" prefWidth="250" prefHeight="60"/>
+            </VBox>
+            <VBox styleClass="vbox" alignment="CENTER" spacing="20">
+                <Label fx:id="mage_label" style="-fx-font-size: 50;"/>
+                <Label fx:id="mage_label2" style="-fx-font-size: 30;" text="EXTRA DAMAGE"/>
+                <Button fx:id="button_mage"  prefWidth="250" prefHeight="60" />
+            </VBox>
+            <VBox styleClass="vbox" alignment="CENTER" spacing="20">
+                <Label fx:id="rouge_label" style="-fx-font-size: 50;"/>
+                <Label fx:id="rouge_label2" style="-fx-font-size: 30;" text="EXTRA CRIT"/>
+                <Button fx:id="button_rouge"  prefWidth="250" prefHeight="60"/>
+            </VBox>
+            <VBox styleClass="vbox" alignment="CENTER" spacing="20">
+                <Label fx:id="cleric_label" style="-fx-font-size: 50;"/>
+                <Label fx:id="cleric_label2" style="-fx-font-size: 30;" text="EXTRA HEALING"/>
+                <Button fx:id="button_cleric"  prefWidth="250" prefHeight="60"/>
+            </VBox>
+        </HBox>
+    </VBox>
+
+</StackPane>
