--- a/src/main/resources/com/example/my_game_java/start-game-view.fxml
+++ b/src/main/resources/com/example/my_game_java/start-game-view.fxml
@@ -31,25 +31,25 @@
                 <ImageView fx:id="warrior_icon" styleClass="icon_class"/>
                 <Label fx:id="warrior_label" style="-fx-font-size: 50;"/>
                 <Label fx:id="warrior_label2" style="-fx-font-size: 30;" text="EXTRA DEFENSE"/>
-                <Button fx:id="button_warrior" prefWidth="250" prefHeight="60"/>
+                <Button fx:id="button_warrior" prefWidth="250" prefHeight="60" onAction="#selectWarrior"/>
             </VBox>
             <VBox styleClass="vbox" alignment="CENTER" spacing="20">
                 <ImageView fx:id="mage_icon" styleClass="icon_class"/>
                 <Label fx:id="mage_label" style="-fx-font-size: 50;"/>
                 <Label fx:id="mage_label2" style="-fx-font-size: 30;" text="EXTRA DAMAGE"/>
-                <Button fx:id="button_mage"  prefWidth="250" prefHeight="60" />
+                <Button fx:id="button_mage"  prefWidth="250" prefHeight="60" onAction="#selectMage"/>
             </VBox>
             <VBox styleClass="vbox" alignment="CENTER" spacing="20">
                 <ImageView fx:id="rouge_icon" styleClass="icon_class"/>
                 <Label fx:id="rouge_label" style="-fx-font-size: 50;"/>
                 <Label fx:id="rouge_label2" style="-fx-font-size: 30;" text="EXTRA CRIT"/>
-                <Button fx:id="button_rouge"  prefWidth="250" prefHeight="60"/>
+                <Button fx:id="button_rouge"  prefWidth="250" prefHeight="60" onAction="#selectRouge"/>
             </VBox>
             <VBox styleClass="vbox" alignment="CENTER" spacing="20">
                 <ImageView fx:id="cleric_icon" styleClass="icon_class"/>
                 <Label fx:id="cleric_label" style="-fx-font-size: 50;"/>
                 <Label fx:id="cleric_label2" style="-fx-font-size: 30;" text="EXTRA HEALING"/>
-                <Button fx:id="button_cleric"  prefWidth="250" prefHeight="60"/>
+                <Button fx:id="button_cleric"  prefWidth="250" prefHeight="60" onAction="#selectCleric"/>
             </VBox>
         </HBox>
     </VBox>
