--- a/src/main/resources/com/example/my_game_java/game-view.fxml
+++ b/src/main/resources/com/example/my_game_java/game-view.fxml
@@ -3,11 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.image.ImageView?>
+
+<?import javafx.scene.shape.Rectangle?>
 <StackPane xmlns="http://javafx.com/javafx"
            xmlns:fx="http://javafx.com/fxml"
            fx:controller="com.example.my_game_java.controllers.GameController"
@@ -17,23 +18,25 @@
 
     <ImageView fx:id="imageView" />
     <children>
-        <AnchorPane>
-            <children>
-                <VBox spacing="10">
-                    <TextArea fx:id="textArea"
-                              editable="false"
-                              wrapText="true"
-                              prefWidth="640.0" prefHeight="360.0"
-                              style="-fx-control-inner-background: black; -fx-text-fill: white; -fx-font-size: 20;"/>
+        <!-- Główny kontener poziomy -->
+        <HBox spacing="20">
+            <!-- Pierwsza kolumna -->
+            <VBox spacing="10">
+                <TextArea fx:id="textArea"
+                          editable="false"
+                          wrapText="true"
+                          prefWidth="800.0" prefHeight="400.0"
+                          style="-fx-control-inner-background: black; -fx-text-fill: white; -fx-font-size: 20;"/>
+                <Button fx:id="addTextButton"
+                        text="DODAJ"
+                        onAction="#addText"/>
+            </VBox>
 
-                    <Button fx:id="addTextButton"
-                            text="DODAJ"
-                            onAction="#addText"/>
-                </VBox>
-            </children>
-            <AnchorPane.topAnchor>0.0</AnchorPane.topAnchor>
-            <AnchorPane.leftAnchor>0.0</AnchorPane.leftAnchor>
-        </AnchorPane>
+            <!-- Druga kolumna -->
+            <VBox spacing="10">
+                <Rectangle width="480" height="400" fill="black" opacity="0.5"/>
+            </VBox>
+        </HBox>
     </children>
 
 </StackPane>
