--- a/src/main/resources/com/example/my_game_java/game-view.fxml
+++ b/src/main/resources/com/example/my_game_java/game-view.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.image.ImageView?>
-
 <?import javafx.scene.shape.Rectangle?>
+
 <StackPane xmlns="http://javafx.com/javafx"
            xmlns:fx="http://javafx.com/fxml"
            fx:controller="com.example.my_game_java.controllers.GameController"
@@ -33,8 +32,27 @@
             </VBox>
 
             <!-- Druga kolumna -->
-            <VBox spacing="10">
-                <Rectangle width="480" height="400" fill="black" opacity="0.5"/>
+            <VBox spacing="10" alignment="TOP_CENTER" prefHeight="400.0">
+                <!-- Tło ekwipunku -->
+                <StackPane>
+                    <Rectangle width="480" height="400" fill="black" opacity="0.5"/>
+
+                    <!-- Ekwipunek: Układ na wzór postaci -->
+                    <VBox spacing="5" alignment="CENTER">
+                        <!-- Hełm -->
+                        <ImageView fx:id="helmet_icon" fitWidth="64" fitHeight="64" />
+
+                        <!-- Zbroja i ręce -->
+                        <HBox spacing="20" alignment="CENTER">
+                            <ImageView fx:id="main_hand_icon" fitWidth="64" fitHeight="64"/>
+                            <ImageView fx:id="armor_icon" fitWidth="64" fitHeight="64" />
+                            <ImageView fx:id="second_hand_icon" fitWidth="64" fitHeight="64" />
+                        </HBox>
+
+                        <!-- Buty -->
+                        <ImageView fx:id="boots_icon" fitWidth="64" fitHeight="64" />
+                    </VBox>
+                </StackPane>
             </VBox>
         </HBox>
     </children>
