--- a/src/main/resources/com/example/my_game_java/game-view.fxml
+++ b/src/main/resources/com/example/my_game_java/game-view.fxml
@@ -36,7 +36,7 @@
                     </VBox>
                     <VBox spacing="10">
                         <Button fx:id="block"
-                                onAction="#addText"/>
+                                onAction="#update"/>
                         <Button fx:id="walk"
                                 onAction="#addText"/>
                     </VBox>
@@ -66,7 +66,10 @@
                     </VBox>
                 </StackPane>
                 <VBox prefHeight="275" prefWidth="480" style="-fx-background-color: black"
-                opacity="0.5">
+                opacity="0.5" spacing="10">
+                    <StackPane prefWidth="480" prefHeight="20">
+                        <Rectangle fx:id="healthBar" height="20" width="300" fill="red"/>
+                    </StackPane>
                     <Label text="elo" style="-fx-font-size: 15"/>
                     <Label text="tutaj" style="-fx-font-size: 15"/>
                     <Label text="staty" style="-fx-font-size: 15"/>
